--- a/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/components/modal.scss
+++ b/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/components/modal.scss
@@ -1,33 +1,6 @@
-@import '../common/themes';
-
-$theme-map: null; //important! do not delete this
-
-@import '../common/variables';
-@import '../common/typography';
-@import '../components/button';
-@import '../components/dropdown';
-@import '../components/accordion';
-@import '../components/input';
-@import '../components/tabs';
-@import '../components/daterangepicker';
-@import '../components/pagination';
-@import '../components/card';
-@import '../components/list-group';
-@import '../components/alert';
-@import '../common/ui-elements';
-@import '../components/toasts';
-@import '../components/context-menu-pgmanage';
-@import '../components/cron-light';
-@import '../components/pev2/pev2';
-@import '../components/schema-editor';
-@import '../components/vue-power-tree';
-
 $modalPadding: 24px;
 
 .modal {
-    font-family: $fontFamily;
-    font-size: $fontSize;
-
     @include themify() {
         color: themed($color);
     }
