--- a/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/themes/light.scss
+++ b/pgmanage/app/static/assets/js/pgmanage_frontend/src/assets/scss/themes/light.scss
@@ -456,17 +456,6 @@ SOFTWARE.
     border-top-color: #d2d2d2;
   }
 
-  /* SCROLLBAR CHROME */
-  /* Track */
-  ::-webkit-scrollbar-track {
-    background: #EFEFEF;
-  }
-  /* Handle */
-  ::-webkit-scrollbar-thumb {
-    background: #DEDEDE;
-    cursor: pointer;
-  }
-
   /* SCROLLBAR FIREFOX (new versions) */
   * {
     scrollbar-color: #DEDEDE #EFEFEF;
